# rusty-hash

./: Cargo.toml  README.md  appveyor.yml  is_release.ps1
src/: checksum.rs  main.rs
